予測クラスの作成

--- a/VGG16.ipynb
+++ b/VGG16.ipynb
@@ -439,11 +439,92 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<h3>推論フェーズ</h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#モデルの読み込み\n",
+    "model = load_model('CNN.hdf5')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 予測クラスの作成\n",
+    "\n",
+    "FILE_PATH = './photo1-3.png'\n",
+    "IMG_SIZE = 100\n",
+    "\n",
+    "# 画像ファイルパスから読み込み\n",
+    "img = Image.open(FILE_PATH)\n",
+    "img = img.convert(\"RGB\")\n",
+    "img = img.resize((IMG_SIZE, IMG_SIZE))  # リサイズ\n",
+    "\n",
+    "img_array = np.asarray(img)\n",
+    "img_array = img_array.astype('float32') / 255\n",
+    "\n",
+    "#このままpredictに渡すとエラーになるため、形状を変える（kerasがバッチ処理のため）\n",
+    "img_expand = img_array[np.newaxis, ...]\n",
+    "# print(img_expand.shape)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 画像の表示\n",
+    "# plt.imshow(img)\n",
+    "# plt.show()\n",
+    "# データ確認\n",
+    "# print(\"データ：\", img)\n",
+    "# img_array = np.asarray(img)\n",
+    "# img_array = img_array.astype('float32') / 255\n",
+    "# print(\"配列：\", img_array)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {
+    "id": "ls8pFIAd3sNg"
+   },
+   "outputs": [],
+   "source": [
+    "#testデータ30件の予測値\n",
+    "preds = model.predict(img_expand)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {
     "id": "ZgOZXRe_Y_6b"
    },
+   "outputs": [],
+   "source": [
+    "print(\"このひとの年齢は\",preds[0][0],\"歳です\")\n",
+    "plt.imshow(img)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
